--- a/src/output.css
+++ b/src/output.css
@@ -513,112 +513,76 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .absolute {
   position: absolute;
-}
-
-.top-\[200px\] {
-  top: 200px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-\[\] {
-  left: ;
-}
-
-.left-\[500px\] {
-  left: 500px;
-}
-
-.left-\[400px\] {
-  left: 400px;
-}
-
-.left-\[450px\] {
-  left: 450px;
-}
-
-.left-\[430px\] {
-  left: 430px;
-}
-
-.left-\[440px\] {
-  left: 440px;
-}
-
-.left-\[480px\] {
-  left: 480px;
-}
-
-.left-\[490px\] {
-  left: 490px;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[20px\] {
-  top: 20px;
-}
-
-.left-\[0px\] {
-  left: 0px;
-}
-
-.left-\[380px\] {
-  left: 380px;
-}
-
-.left-\[360px\] {
-  left: 360px;
-}
-
-.left-\[340px\] {
-  left: 340px;
-}
-
-.top-\[60px\] {
-  top: 60px;
-}
-
-.left-\[320px\] {
-  left: 320px;
-}
-
-.left-\[300px\] {
-  left: 300px;
-}
-
-.top-\[2600px\] {
-  top: 2600px;
-}
-
-.top-\[260px\] {
-  top: 260px;
 }
 
 .left-\[200px\] {
   left: 200px;
 }
 
-.left-\[20dd0px\] {
-  left: 20dd0px;
+.left-\[340px\] {
+  left: 340px;
 }
 
-.top-\[280px\] {
-  top: 280px;
+.left-\[380px\] {
+  left: 380px;
+}
+
+.left-\[430px\] {
+  left: 430px;
+}
+
+.left-\[490px\] {
+  left: 490px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-\[200px\] {
+  top: 200px;
+}
+
+.top-\[20px\] {
+  top: 20px;
+}
+
+.top-\[260px\] {
+  top: 260px;
+}
+
+.top-\[60px\] {
+  top: 60px;
+}
+
+.left-\[160px\] {
+  left: 160px;
+}
+
+.top-\[220px\] {
+  top: 220px;
+}
+
+.block {
+  display: block;
 }
 
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-\[100vh\] {
@@ -633,12 +597,45 @@ video {
   width: 100%;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+.animate-bounce {
+  animation: bounce 1s infinite;
 }
 
 .bg-black {
@@ -646,14 +643,32 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-teal-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 234 212 / var(--tw-bg-opacity));
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 /*  genrate new class?? */
